System property opentree.taxomachine.num.transactions now controls the number of transactions at runtime